# codex-warden

./: Cargo.toml  README.md  SPEC.md
.github/workflows/: ci.yml
src/: config.rs  logging.rs  main.rs  registry.rs  shared_map.rs  signal.rs  supervisor.rs  task_record.rs  wait_mode.rs
src/platform/: mod.rs  unix.rs  windows.rs
